argocd/media-server/jellyfin/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - fromCIDR:
        - 192.168.0.0/16
        - 10.10.8.0/22
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: overseerr
            app: overseerr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tracearr
            app: tracearr
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tracearr
            app: tracearr
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
